--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset = "UTF-8">
 	<link href="css/reset.css" rel="stylesheet" type="text/css"></link>
 	<link href="css/style.css" rel="stylesheet" type="text/css"></link>
-	<link href="https://fonts.googleapis.com/css?family=Mukta" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Mukta" rel="stylesheet"></link>
 </head>
 <body>
 
